:lipstick: Make sure that map does not overflow parent element

--- a/src/style.css
+++ b/src/style.css
@@ -14,17 +14,22 @@
   position: relative;
   display: flex;
   max-height: 60vh;
-  max-width: 100vw;
+  max-width: 100%;
 }
 
 .ol-sp-map-overlay-container {
   position: relative;
   display: block;
+  max-height: inherit;
+  max-width: inherit;
 }
 
 .ol-sp-map {
+  position: relative;
   height: 100%;
   width: 100%;
+  max-height: inherit;
+  max-width: inherit;
 }
 
 .ol-sp-instructions {
